--- a/index.html
+++ b/index.html
@@ -21,58 +21,87 @@
     <script src="//maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false&amp;libraries=places"></script>
   </head>
   <body>
-    <div id="content">
-      <div id="layout" ng-app="0media.events" ng-controller="0media.events.main">
-        <div id="color" class="form-group"><span class="pull-right">
-            <div ng-click="setStyle('default')" class="btn btn-primary btn-sm">預設</div>
-            <div ng-click="setStyle('gray')" class="btn btn-default btn-sm">亮灰</div>
-            <div ng-click="setStyle('green')" class="btn btn-success btn-sm">淺綠</div></span>
-          <div id="title" class="btn-sm pull-left"><strong><img src="img/favicon.png"> 事件數據視覺化</strong></div>
-          <div class="clearfix"></div>
-        </div>
-        <div id="main">
-          <div id="zm-event" ng-class="[style,loaded,dim.htype,dim.wtype]" class="default">
-            <div class="dimmer"><img src="img/spin.gif"><br><br>準備時間軸</div>
-            <div class="timeline">
-              <div class="timeline-inner">
-                <div class="header">
-                  <div class="name">{{current.name}}</div>
-                  <div class="casualty">{{current.casualty.die}}死 {{current.casualty.hurt}}傷</div>
-                </div>
-                <div class="background"></div>
-                <div class="line-wrap">
-                  <div class="line"></div>
-                </div>
-                <div class="events">
-                  <div ng-attr-style="top:{{events.top}}px" ng-class="{'spd1':speed==1,'spd2':speed==2,'spd3':speed==3}" class="events-inner">
-                    <div ng-repeat="event in events" ng-attr-style="top:{{event.top}}px;opacity:{{event.fadeout}}" ng-class="{'top':event.first}" class="event">
-                      <div ng-class="{'xl':event.casualty.total&gt;2000,'lg':event.casualty.total&lt;2000 &amp;&amp; event.casualty.total&gt;500}" class="circle"></div>
-                      <div class="desc">
-                        <div class="data">{{event.date}}</div>
-                        <div ng-attr-style="opacity:{{event.opacity}}" class="name">{{event.name}}</div>
+    <div id="content" ng-app="main" ng-controller="main">
+      <div id="layout">
+        <div id="demopanel" ng-app="0media.events" ng-controller="0media.events.main">
+          <div id="color" class="form-group"><span class="pull-right">
+              <div ng-click="setStyle('default')" class="btn btn-primary btn-sm">預設</div>
+              <div ng-click="setStyle('gray')" class="btn btn-default btn-sm">亮灰</div>
+              <div ng-click="setStyle('green')" class="btn btn-success btn-sm">淺綠</div></span>
+            <div id="title" class="btn-sm pull-left"><strong><img src="img/favicon.png"> 事件數據視覺化</strong></div>
+            <div class="clearfix"></div>
+          </div>
+          <div id="main">
+            <div id="zm-event" ng-class="[style,loaded,dim.htype,dim.wtype]" class="default">
+              <div class="dimmer"><img src="img/spin.gif"><br><br>Preparing the timeline</div>
+              <div class="timeline">
+                <div class="timeline-inner">
+                  <div class="header">
+                    <div class="name">{{current.name}}</div>
+                    <div class="casualty">{{current.casualty.die}}死 {{current.casualty.hurt}}傷</div>
+                  </div>
+                  <div class="background"></div>
+                  <div class="line-wrap">
+                    <div class="line"></div>
+                  </div>
+                  <div class="events">
+                    <div ng-attr-style="top:{{events.top}}px" ng-class="{'spd1':speed==1,'spd2':speed==2,'spd3':speed==3}" class="events-inner">
+                      <div ng-repeat="event in events" ng-attr-style="top:{{event.top}}px;opacity:{{event.fadeout}}" ng-class="{'top':event.first}" class="event">
+                        <div ng-class="{'xl':event.casualty.total&gt;2000,'lg':event.casualty.total&lt;2000 &amp;&amp; event.casualty.total&gt;500}" class="circle"></div>
+                        <div class="desc">
+                          <div class="data">{{event.date}}</div>
+                          <div ng-attr-style="opacity:{{event.opacity}}" class="name">{{event.name}}</div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="ctrlpanel"><i ng-click="reset()" class="glyphicon glyphicon-fast-backward"></i><i ng-click="play()" ng-show="state!=1" class="glyphicon glyphicon-play"></i><i ng-click="pause()" ng-show="state!=0" class="glyphicon glyphicon-pause"></i><i ng-click="speeding()" class="glyphicon speed">{{speed}}X</i>
-              <div class="pull-right"><i ng-click="step(-1)" ng-class="{'active':dir==-1}" class="glyphicon glyphicon-chevron-up"></i><i ng-click="step(1)" ng-class="{'active':dir==1}" class="glyphicon glyphicon-chevron-down"></i></div>
-            </div>
-            <div class="eventmap"></div>
-            <div class="bubbles">
-              <div ng-repeat="event in events" ng-attr-style="top:{{event.y}}px;left:{{event.x}}px;width:{{event.size}}px;height:{{event.size}}px;opacity:{{event.circle_opacity}}" ng-class="{'in':event.bubble.state==1,'out':event.bubble.state==2}" class="bubble"></div>
-            </div>
-            <div class="infopanel">
-              <div class="pull-right"><i class="glyphicon glyphicon-share"></i></div>
-              <div ng-cloak class="date pull-left">{{current.date}}</div>
-              <div ng-cloak class="title">{{current.name}}</div>
-              <div class="casualty pull-right">
-                <div ng-cloak class="c-die">{{current.casualty.die}}<small>死</small></div>
-                <div ng-cloak class="c-hurt">{{current.casualty.hurt}}<small>傷</small></div>
+              <div class="ctrlpanel"><i ng-click="reset()" class="glyphicon glyphicon-fast-backward"></i><i ng-click="play()" ng-show="state!=1" class="glyphicon glyphicon-play"></i><i ng-click="pause()" ng-show="state!=0" class="glyphicon glyphicon-pause"></i><i ng-click="speeding()" class="glyphicon speed">{{speed}}X</i>
+                <div class="pull-right"><i ng-click="step(-1)" ng-class="{'active':dir==-1}" class="glyphicon glyphicon-chevron-up"></i><i ng-click="step(1)" ng-class="{'active':dir==1}" class="glyphicon glyphicon-chevron-down"></i></div>
+              </div>
+              <div class="eventmap"></div>
+              <div class="bubbles">
+                <div ng-repeat="event in events" ng-attr-style="top:{{event.y}}px;left:{{event.x}}px;width:{{event.size}}px;height:{{event.size}}px;opacity:{{event.circle_opacity}}" ng-class="{'in':event.bubble.state==1,'out':event.bubble.state==2}" class="bubble"></div>
+              </div>
+              <div class="infopanel">
+                <div class="pull-right"><i class="glyphicon glyphicon-share"></i></div>
+                <div ng-cloak class="date pull-left">{{current.date}}</div>
+                <div ng-cloak class="title">{{current.name}}</div>
+                <div class="casualty pull-right">
+                  <div ng-cloak class="c-die">{{current.casualty.die}}<small>死</small></div>
+                  <div ng-cloak class="c-hurt">{{current.casualty.hurt}}<small>傷</small></div>
+                </div>
               </div>
             </div>
           </div>
+        </div>
+        <div id="description">
+          <hr>
+          <h2>Events Visualization</h2>
+          <p>This tool helps you visualize events across time, using bubble to show the magnitude of specific event.</p>
+          <hr>
+          <h3>How to Use</h3>
+          <p>You need to put the event data in google spreadsheet formatted like this one:</p>
+          <iframe id="sample-doc" src="https://docs.google.com/spreadsheets/d/1p0DNKBt4oNfDBgHv4ZXH-vu0bJ_PtxFFXCL7o4O_Cxo/pubhtml?widget=true&amp;amp;headers=false"></iframe><br><br>
+          <p>Then, in the menu bar of the desired spreadsheet, click <em>Menu  </em>&#xbb; <em>Publish to the Web </em>&#xbb;  <em>Publish</em>to make it public to anyone.</p>
+          <p>Copy &amp; paste the link of the spreadsheet in this input box:</p>
+          <div class="form-group">
+            <input placeholder="e.g., https://docs.google.com/spreadsheets/d/1p0DNKBt4oNfDBgHv4ZXH-vu0bJ_PtxFFXCL7o4O_Cxo/pubhtml" ng-model="datasrc" class="form-control">
+          </div>
+          <p>and choose one colorschema:</p>
+          <div class="form-group">
+            <div class="btn-group">
+              <div ng-click="setStyle('default')" ng-class="{'active':style=='default'}" class="btn btn-primary btn-sm">Default</div>
+              <div ng-click="setStyle('gray')" ng-class="{'active':style=='gray'}" class="btn btn-default btn-sm">Gray</div>
+              <div ng-click="setStyle('green')" ng-class="{'active':style=='green'}" class="btn btn-success btn-sm">Green</div>
+            </div>
+          </div>
+          <p>sample output will be like this:</p>
+          <iframe id="result" ng-attr-src="{{outurl}}"></iframe>
+          <p>and here is the html code for embedding this in websites:</p>
+          <textarea ng-model="embedcode" rows="5" class="form-control"></textarea>
+          <div id="footer"></div>
         </div>
       </div>
     </div>
