--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>事件數據視覺化</title>
     <!-- libraries-->
     <meta property="og:locale" content="zh_TW">
-    <meta property="og:image" content="http://zbryikt.github.io/visualize/disaster/img/thumbnail.png">
+    <meta property="og:image" content="http://zbryikt.github.io/geoevent/img/thumbnail.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
+    <meta property="og:title" content="事件數據視覺化">
+    <meta property="og:description" content="This tool helps you visualize events across time, using bubble to show the magnitude of specific event.">
     <script type="text/javascript" src="assets/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="assets/angular/1.2.3/angular.min.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/3.0.2/css/bootstrap.flatly.min.css">
