--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
+    <meta property="og:url" content="http://zbryikt.github.io/geoevent/">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="事件數據視覺化">
     <meta property="og:description" content="This tool helps you visualize events across time, using bubble to show the magnitude of specific event.">
     <script type="text/javascript" src="assets/jquery/1.10.2/jquery.min.js"></script>
