--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
           </div><br>
           <p>sample output will be like this:</p>
           <iframe id="result" ng-attr-src="{{outurl}}"></iframe>
-          <p>and here is the html code for embedding this in websites:</p>
+          <p>here is the html code for embedding this in websites:</p>
           <textarea ng-model="embedcode" rows="5" class="form-control"></textarea>
+          <p>or the direct link to the result page:</p>
+          <input ng-model="outurlwithhost" ng-disabled="true" class="form-control">
           <div id="footer"></div>
         </div>
       </div>
