--- a/widget/index.html
+++ b/widget/index.html
@@ -3,7 +3,7 @@
   <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>事件數據視覺化</title>
+    <title>Events Visualization</title>
     <!-- libraries-->
     <meta property="og:locale" content="zh_TW">
     <meta property="og:image" content="http://zbryikt.github.io/visualize/disaster/img/thumbnail.png">
@@ -12,7 +12,7 @@
     <meta property="og:image:height" content="200">
     <meta property="og:url" content="http://zbryikt.github.io/geoevent/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="事件數據視覺化">
+    <meta property="og:title" content="Events Visualization">
     <meta property="og:description" content="This tool helps you visualize events across time, using bubble to show the magnitude of specific event.">
     <script type="text/javascript" src="../assets/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="../assets/angular/1.2.3/angular.min.js"></script>
