--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>事件數據視覺化</title>
+    <title>Events Visualization</title>
     <!-- libraries-->
     <meta property="og:locale" content="zh_TW">
     <meta property="og:image" content="http://zbryikt.github.io/geoevent/img/thumbnail.png">
@@ -12,7 +12,7 @@
     <meta property="og:image:height" content="200">
     <meta property="og:url" content="http://zbryikt.github.io/geoevent/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="事件數據視覺化">
+    <meta property="og:title" content="Events Visualization">
     <meta property="og:description" content="This tool helps you visualize events across time, using bubble to show the magnitude of specific event.">
     <script type="text/javascript" src="assets/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="assets/angular/1.2.3/angular.min.js"></script>
@@ -32,7 +32,7 @@
               <div ng-click="setStyle('default')" class="btn btn-primary btn-sm">預設</div>
               <div ng-click="setStyle('gray')" class="btn btn-default btn-sm">亮灰</div>
               <div ng-click="setStyle('green')" class="btn btn-success btn-sm">淺綠</div></span>
-            <div id="title" class="btn-sm pull-left"><strong><img src="img/favicon.png"> 事件數據視覺化</strong></div>
+            <div id="title" class="btn-sm pull-left"><strong><img src="img/favicon.png"> Events Visualization</strong></div>
             <div class="clearfix"></div>
           </div>
           <div id="main">
