--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <div ng-click="setStyle('default')" class="btn btn-primary btn-sm">預設</div>
               <div ng-click="setStyle('gray')" class="btn btn-default btn-sm">亮灰</div>
               <div ng-click="setStyle('green')" class="btn btn-success btn-sm">淺綠</div></span>
-            <div id="title" class="btn-sm pull-left"><strong><img src="img/favicon.png"> Events Visualization</strong></div>
+            <div id="title" class="btn-sm pull-left"><strong><img src="img/favicon.png"> Events Visualization </strong></div>
             <div class="clearfix"></div>
           </div>
           <div id="main">
@@ -82,6 +82,7 @@
         </div>
         <div id="description">
           <hr>
+          <div data-share="false" data-show-faces="false" data-layout="button_count" class="fb-like pull-right"></div>
           <h2>Events Visualization</h2>
           <p>This tool helps you visualize events across time, using bubble to show the magnitude of specific event.</p>
           <hr>
@@ -122,5 +123,30 @@
         </div>
       </div>
     </div>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '415494205294101',
+          xfbml      : true,
+          version    : 'v2.2'
+        });
+      };
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+      
+    </script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-54066900-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
