--- a/widget/index.html
+++ b/widget/index.html
@@ -58,8 +58,9 @@
         <div class="bubbles">
           <div ng-repeat="event in events" ng-attr-style="top:{{event.y}}px;left:{{event.x}}px;width:{{event.size}}px;height:{{event.size}}px;opacity:{{event.circle_opacity}}" ng-class="{'in':event.bubble.state==1,'out':event.bubble.state==2}" class="bubble"></div>
         </div>
+        <div onclick="window.location.href='http://zbryikt.github.io/geoevent/'" class="home-popover">build your own map!</div>
         <div class="infopanel">
-          <div class="pull-right"><i class="glyphicon glyphicon-share"></i></div>
+          <div class="pull-right"><i onclick="window.location.href='http://zbryikt.github.io/geoevent/'" class="glyphicon glyphicon-home"></i></div>
           <div ng-cloak class="date pull-left">{{current.date}}</div>
           <div ng-cloak class="title">{{current.name}}</div>
           <div class="casualty pull-right">
@@ -69,5 +70,13 @@
         </div>
       </div>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-54066900-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
