--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
           </div><br>
           <p>sample output will be like this:</p>
-          <iframe id="result" ng-attr-src="{{outurl}}"></iframe>
+          <iframe id="result" ng-attr-src="{{outurlwithhost}}"></iframe>
           <p>here is the html code for embedding this in websites:</p>
           <textarea ng-model="embedcode" rows="5" class="form-control"></textarea>
           <p>or the direct link to the result page:</p>
