--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
           <p>sample output will be like this:</p>
           <iframe id="result" ng-attr-src="{{outurlwithhost}}"></iframe>
           <p>here is the html code for embedding this in websites:</p>
-          <textarea ng-model="embedcode" rows="5" class="form-control"></textarea>
-          <p>or the direct link to the result page:</p>
+          <textarea ng-model="embedcode" rows="5" class="form-control"></textarea><br>
+          <p>or the direct link to the result page: ( <a ng-attr-href="{{outurlwithhost}}" target="_blank">open in new tab</a> )</p>
           <input ng-model="outurlwithhost" ng-disabled="true" class="form-control"><br>
           <hr><br>
           <div id="footer">For source code, please visit <a href="http://github.com/zbryikt/geoevent/">Github Repo</a> of the events visualization project.</div>
