update spin gif path

--- a/widget/index.html
+++ b/widget/index.html
@@ -27,7 +27,7 @@
   <body style="overflow:hidden">
     <div id="widget" ng-app="0media.events" ng-controller="0media.events.main">
       <div id="zm-event" ng-class="[style,loaded,dim.htype,dim.wtype]" class="default">
-        <div class="dimmer"><img src="../img/spin.gif"><br><br>Preparing the timeline</div>
+        <div class="dimmer"><img src="img/spin.gif"><br><br>Preparing the timeline</div>
         <div class="timeline">
           <div class="timeline-inner">
             <div class="header">
