--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div id="main">
             <div id="zm-event" ng-class="[style,loaded,dim.htype,dim.wtype]" class="default">
-              <div class="dimmer"><img src="../img/spin.gif"><br><br>Preparing the timeline</div>
+              <div class="dimmer"><img src="img/spin.gif"><br><br>Preparing the timeline</div>
               <div class="timeline">
                 <div class="timeline-inner">
                   <div class="header">
