--- a/index.html
+++ b/index.html
@@ -94,7 +94,13 @@
           <hr>
           <div data-share="false" data-show-faces="false" data-layout="button_count" class="fb-like pull-right"></div>
           <h2>Events Visualization</h2>
-          <p>This tool helps you visualize events across time and space with bubbles of magnitude of events, and works on devices with different screen size. Above is an example of <a href="http://0media.tw/t/geoevent/widget/?src=1yY4pqGqI3rLMf5bQqe5XMztnnJ78RMUrfh-XpJdhd_o&amp;color=default&amp;ratio=20&amp;=undefined&amp;clat=12.573404&amp;clng=-15.193685&amp;initz=2">visualization of Islamic terrorist attacks from 1983 to 2015</a>.</p>
+          <p>This tool helps you visualize events across time and space with bubbles of magnitude of events, and works on devices with different screen size. Above is an example of <a href="http://0media.tw/t/geoevent/widget/?src=1yY4pqGqI3rLMf5bQqe5XMztnnJ78RMUrfh-XpJdhd_o&amp;color=default&amp;ratio=20&amp;=undefined&amp;clat=12.573404&amp;clng=-15.193685&amp;initz=2">visualization of Islamic terrorist attacks from 1983 to 2015</a>.<br>
+            <h4>Other showcase:</h4>
+            <ul>
+              <li><a href="http://0media.tw/t/geoevent/widget/?src=17u9luNKn77I4Tyz3pPADnr6sw3yiob0Z6Dy4_FFpbl4&amp;color=default&amp;ratio=5&amp;clat=20&amp;clng=0&amp;initz=2">Global Earthquake since 1902</a></li>
+              <li><a href="http://0media.tw/t/geoevent/widget/?src=1weTyy3X52QginfNbrSmxjR8WpsAEgJSRjzzqBJ8RaXk&amp;color=default&amp;ratio=20&amp;clat=20&amp;clng=0&amp;initz=2">Global Commercial Aricraft Accident </a>( partial data )</li>
+            </ul>
+          </p>
           <hr>
           <h3>How to Use</h3>
           <p>prepare the event data in a google spreadsheet formatted like this:</p>
